PR review - Spec change to readSamples implemented + empirical distribution from samples